updated index to include more projects

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 				</div>
 			</a>
 
-			<a href="#" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="900" data-id="lmb">
+			<a href="Projects/37signals/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="900" data-id="lmb">
 				<div class="list-works__wrap-img">
-					<img src="http://placehold.it/480x480" class="responsive-img" alt="gallery of jquerygallery works" />
+					<img src="img/37signals.jpg" class="responsive-img" alt="37 signals" />
 				</div>
 				<div class="list-works__overlay"> 
-					<span class="list-works__name-project list-works__name-project_fade">Title work</span>
+					<span class="list-works__name-project list-works__name-project_fade">37 Signals</span>
 					<span class="list-works__link-project">showmore</span>
 				</div>
 			</a>
@@ -586,25 +586,17 @@
 		<div class="popup__inner">
 			<div class="popup__layout">
 				<header class="popup__header box_blur lrmw_layer"  data-show-delay="500" data-hide-delay="1400" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
-					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="1500" data-time="500" data-show-effect="jump" data-hide-effect="rollOut">Title work</span></h3>
-					<img src="http://placehold.it/1200x500" class="responsive-img" alt="Title popup" />
+					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="1500" data-time="500" data-show-effect="jump" data-hide-effect="rollOut">37 Signals</span></h3>
+					<img src="img/37signals2.jpg" class="responsive-img" alt="Title popup" />
 				</header>
 				<div class="popup__content">
 					<div class="popup__description lrmw_layer" data-show-delay="200" data-hide-delay="1200" data-time="500" data-show-effect="fadeInLeft" data-hide-effect="fadeOutLeft">
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-						<p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. </p>
+						<p>Basic replica of 37 signals website with media-Q's(responsive-design), it was an bonus class project that I decided to take on.</p>
 					</div>
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="1200" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
-						<div class="popup__used-tech project-tech project-tech_fullwidth">
-							<h4 class="title title_small">Technologies:</h4>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-css3 lrmw_layer" data-show-delay="1600" data-hide-delay="140" data-time="600" data-show-effect="impulse" data-hide-effect="hinge"></span>	
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-desktop lrmw_layer" data-show-delay="1800" data-hide-delay="180" data-time="600" data-show-effect="impulse" data-hide-effect="hinge"></span>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-codeopen lrmw_layer" data-show-delay="2000" data-hide-delay="220" data-time="600" data-show-effect="impulse" data-hide-effect="hinge"></span>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-coffee lrmw_layer" data-show-delay="2200" data-hide-delay="260" data-time="600" data-show-effect="impulse" data-hide-effect="hinge"></span>
-						</div>
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="#" class="popup__show-more">demo.project.com</a>
+							<a href="Projects/37signals/index.html" class="popup__show-more">37 signals</a>
 						</div>
 					</div>
 				</div>
