added new files to portofolio, changed layout

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 				</div>
 			</a>	
 
-			<a href="#" class="list-works__item list-works__item_big layer open-popup_js" data-show-effect="fadeIn" data-show-delay="700" data-id="lrmw">
+			<a href="Projects/dragonballgallery/index.html" class="list-works__item list-works__item_big layer open-popup_js" data-show-effect="fadeIn" data-show-delay="700" data-id="lrmw">
 				<div class="list-works__wrap-img">
-					<img src="http://placehold.it/960x960" class="responsive-img" alt="Work" />
+					<img src="img/dbz.jpg" class="responsive-img" alt="Work" />
 				</div>
 				<div class="list-works__overlay"> 
-					<span class="list-works__name-project list-works__name-project_fade">Title work</span>
+					<span class="list-works__name-project list-works__name-project_fade">DBZ Character Select</span>
 					<span class="list-works__link-project">showmore</span>
 				</div>
 			</a>
@@ -381,8 +381,7 @@
 			<a href="#about" class="nav__link init-scroll_js" data-scroll-nav="1" data-id-section="about">About me</a>
 			<a href="#skills" class="nav__link init-scroll_js" data-scroll-nav="3" data-id-section="skills">Skills</a>
             <a href="#experience" class="nav__link init-scroll_js" data-scroll-nav="6" data-id-section="experience">Experience</a>
-<!-- 			<a href="#contact" class="nav__link init-scroll_js" data-scroll-nav="8" data-id-section="contact">Contact</a>
- -->		</nav>
+		</nav>
 		<div class="nav-icon mobile-menu-open_js">
 			<div class="icon-menu"></div>
 		</div>
@@ -402,8 +401,6 @@
 			<a href="#skills" class="nav-panel__link init-scroll_js" data-scroll-nav="2" data-id-section="skills"><i class="icon icon-skills nav-panel__icon"></i>Skills</a>
 			<a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="experience"><i class="icon icon-diamond nav-panel__icon"></i>Experience</a>
 			<a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="6" data-id-section="portfolio"><i class="icon icon-th nav-panel__icon"></i>Portfolio</a>
-			<!-- <a href="#contact" class="nav-panel__link init-scroll_js" data-scroll-nav="8" data-id-section="contact"><i class="icon icon-mail nav-panel__icon"></i>Contact</a>
-		</nav> -->
 	</div>
 </div>
 
@@ -638,26 +635,17 @@
 		<div class="popup__inner">
 			<div class="popup__layout">
 				<header class="popup__header box_blur lrmw_layer"  data-show-delay="500" data-hide-delay="1200" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
-					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInDown" data-hide-effect="fadeOutUp">Title work</span></h3>
-					<img src="http://placehold.it/1200x500" class="responsive-img" alt="Title popup" />
+					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInDown" data-hide-effect="fadeOutUp">DBZ character select</span></h3>
+					<img src="img/dbz2.jpg" class="responsive-img" alt="Title popup" />
 				</header>
 				<div class="popup__content">
 					<div class="popup__description lrmw_layer" data-show-delay="200" data-hide-delay="400" data-time="500" data-show-effect="fadeInLeft" data-hide-effect="fadeOutLeft">
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-						<p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. </p>
+						<p>Project was to use javascript to make an Ecommerce store page, everybody was making an apparel clothing site, so I decided to change it up by making it about a video game character selection screen. I wanted mines to look different then everyone elses'. Made with bootstrap, css, html, css webkits animations, etc.</p>
 					</div>
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="800" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
-						<div class="popup__used-tech project-tech project-tech_fullwidth">
-							<h4 class="title title_small">Technologies:</h4>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-html5 lrmw_layer" data-show-delay="1400" data-hide-delay="100" data-time="500" data-show-effect="flipInY" data-hide-effect="flipOutY"></span>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-css3 lrmw_layer" data-show-delay="1600" data-hide-delay="140" data-time="500" data-show-effect="flipInY" data-hide-effect="flipOutY"></span>	
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-desktop lrmw_layer" data-show-delay="1800" data-hide-delay="180" data-time="500" data-show-effect="flipInY" data-hide-effect="flipOutY"></span>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-codeopen lrmw_layer" data-show-delay="2000" data-hide-delay="220" data-time="500" data-show-effect="flipInY" data-hide-effect="flipOutY"></span>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-coffee lrmw_layer" data-show-delay="2200" data-hide-delay="260" data-time="500" data-show-effect="flipInY" data-hide-effect="flipOutY"></span>
-						</div>
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="#" class="popup__show-more">demo.project.com</a>
+							<a href="#" class="popup__show-more">Go Select Character</a>
 						</div>
 					</div>
 				</div>
