--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
 				</div>
 			</a>
 
-			<a href="#" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="1000" data-id="mrt">
+			<a href="project/tictactoe/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="1000" data-id="mrt">
 				<div class="list-works__wrap-img">
-					<img src="http://placehold.it/480x480" class="responsive-img" alt="Work" />
+					<img src="img/tictactoe.jpg" class="responsive-img" alt="tictactoe" />
 				</div>
 				<div class="list-works__overlay"> 
-					<span class="list-works__name-project list-works__name-project_fade">Title work</span>
+					<span class="list-works__name-project list-works__name-project_fade">Tictactoe</span>
 					<span class="list-works__link-project">showmore</span>
 				</div>
 			</a>
 
-			<a href="#" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="1100" data-id="pan">
+			<a href="Projects/liquidgem/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="1100" data-id="pan">
 				<div class="list-works__wrap-img">
-					<img src="http://placehold.it/480x480" class="responsive-img" alt="Work" />
+					<img src="img/lgem.jpg" class="responsive-img" alt="Work" />
 				</div>
 				<div class="list-works__overlay"> 
-					<span class="list-works__name-project list-works__name-project_fade">Title work</span>
+					<span class="list-works__name-project list-works__name-project_fade">LiquidGem</span>
 					<span class="list-works__link-project">showmore</span>
 				</div>
 			</a>
@@ -553,25 +553,18 @@
 		<div class="popup__inner">
 			<div class="popup__layout">
 				<header class="popup__header box_blur lrmw_layer"  data-show-delay="500" data-hide-delay="900" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
-					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="450" data-time="500" data-show-effect="lightSpeedIn" data-hide-effect="seesaw">Title work</span></h3>
-					<img src="http://placehold.it/1200x500" class="responsive-img" alt="Title popup" />
+					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="450" data-time="500" data-show-effect="lightSpeedIn" data-hide-effect="seesaw">Tictactoe</span></h3>
+					<img src="img/tictactoe2.jpg" class="responsive-img" alt="Title popup" />
 				</header>
 				<div class="popup__content">
 					<div class="popup__description lrmw_layer" data-show-delay="200" data-hide-delay="600" data-time="500" data-show-effect="fadeInLeft" data-hide-effect="fadeOutLeft">
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-						<p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. </p>
+						<p>Made tictactoe using javascript and canvas, it was a fun project.</p>
+						
 					</div>
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
-						<div class="popup__used-tech project-tech project-tech_fullwidth">
-							<h4 class="title title_small">Technologies:</h4>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-css3 lrmw_layer" data-show-delay="1600" data-hide-delay="140" data-time="600" data-show-effect="rotateInUpRight" data-hide-effect="lightSpeedOut"></span>	
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-desktop lrmw_layer" data-show-delay="1800" data-hide-delay="180" data-time="600" data-show-effect="rotateInUpRight" data-hide-effect="lightSpeedOut"></span>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-codeopen lrmw_layer" data-show-delay="2000" data-hide-delay="220" data-time="600" data-show-effect="rotateInUpRight" data-hide-effect="lightSpeedOut"></span>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-coffee lrmw_layer" data-show-delay="2200" data-hide-delay="260" data-time="600" data-show-effect="rotateInUpRight" data-hide-effect="lightSpeedOut"></span>
-						</div>
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="#" class="popup__show-more">demo.project.com</a>
+							<a href="Projects/tictactoe/index.html" class="popup__show-more">Play!!</a>
 						</div>
 					</div>
 				</div>
@@ -606,24 +599,16 @@
 			<div class="popup__layout">
 				<header class="popup__header box_blur lrmw_layer"  data-show-delay="500" data-hide-delay="900" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
 					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInUp" data-hide-effect="fadeOutDown">Title work</span></h3>
-					<img src="http://placehold.it/1200x500" class="responsive-img" alt="Title popup" />
+					<img src="img/lgem2.jpg" class="responsive-img" alt="Title popup" />
 				</header>
 				<div class="popup__content">
 					<div class="popup__description lrmw_layer" data-show-delay="200" data-hide-delay="600" data-time="500" data-show-effect="fadeInLeft" data-hide-effect="fadeOutLeft">
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-						<p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. </p>
+						<p>Basic replica of an class project called "Liquid Gem", composed of CSS and HTML nothing too fancy.</p>
 					</div>
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
-						<div class="popup__used-tech project-tech project-tech_fullwidth">
-							<h4 class="title title_small">Technologies:</h4>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-css3 lrmw_layer" data-show-delay="1600" data-hide-delay="140" data-time="600" data-show-effect="flipInX" data-hide-effect="flipOutX"></span>	
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-desktop lrmw_layer" data-show-delay="1800" data-hide-delay="180" data-time="600" data-show-effect="flipInX" data-hide-effect="flipOutX"></span>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-codeopen lrmw_layer" data-show-delay="2000" data-hide-delay="220" data-time="600" data-show-effect="flipInX" data-hide-effect="flipOutX"></span>
-							<span class="icon icon_middle icon_rounded icon_rounded-black project-tech__icon icon-coffee lrmw_layer" data-show-delay="2200" data-hide-delay="260" data-time="600" data-show-effect="flipInX" data-hide-effect="flipOutX"></span>
-						</div>
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="#" class="popup__show-more">demo.project.com</a>
+							<a href="Projects/liquidgem/index.html" class="popup__show-more">Liquid Gem</a>
 						</div>
 					</div>
 				</div>
@@ -645,7 +630,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="800" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="#" class="popup__show-more">Go Select Character</a>
+							<a href="Projects/dragonballgallery/index.html" class="popup__show-more">Go Select Character</a>
 						</div>
 					</div>
 				</div>
@@ -657,9 +642,9 @@
 		<div class="popup__inner">
 			<div class="popup__layout">
 				<header class="popup__header box_blur lrmw_layer" data-show-delay="100" data-hide-delay="1000" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
-					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInUp" data-hide-effect="fadeOutDown">LOREM IPSUM DOLOR SIT AMET</span></h3>
-					<img src="http://placehold.it/1200x800" class="responsive-img" alt="Title popup" />
-					<div class="popup-blog__date lrmw_layer" data-show-delay="1200" data-hide-delay="300" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">30 December, 2015</div>
+					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInUp" data-hide-effect="fadeOutDown"></span></h3>
+					<img src="" class="responsive-img" alt="Title popup" />
+					<div class="popup-blog__date lrmw_layer" data-show-delay="1200" data-hide-delay="300" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">2017</div>
 				</header>
 				<div class="popup__content">
 					<div class="popup__description popup__description_fullwidth lrmw_layer" data-show-delay="200" data-hide-delay="600" data-time="500" data-show-effect="fadeInLeft" data-hide-effect="fadeOutLeft">
