changed color and text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>BILL HOANG Portfolio</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico">
 <link rel="icon" href="favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="css/main.css" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css"/>
@@ -335,31 +335,7 @@
         </div>
     </div>
 </section>
-
-
-<!-- <section id="contact" class="wrapper display_js">
-	<div class="main-container main-container_padding">
-		<header class="main-container__header">
-			<h2 class="title title_bottom-decor">Contact</h2>
-			<div class="subtitle">Get in touch</div>
-		</header>
-		<form class="contact-form">
-			<div class="contact-form__item layer"  data-show-effect="fadeInLeft" data-show-delay="400">
-				<i class="icon icon-user contact-form__icon"></i>
-				<input class="text-field" placeholder="Your name" name="username" required/>
-			</div>
-			<div class="contact-form__item layer"  data-show-effect="fadeInRight" data-show-delay="500">
-				<i class="icon icon-mail contact-form__icon"></i>
-				<input class="text-field" type="email" placeholder="Your email" name="email" required/>
-			</div>
-			<div class="contact-form__item layer"  data-show-effect="fadeInLeft" data-show-delay="600">
-				<i class="icon icon-message contact-form__icon"></i>
-				<textarea class="text-field textarea" placeholder="Your message" name="message" required></textarea>
-			</div>
-			<button class="button contact-form__button layer"  data-show-effect="fadeInRight" data-show-delay="700"><span class="button__label">Send</span></button>
-		</form> -->
-	</div>
-</section>
+	
 <footer class="footer">
 	<div class="main-container">
 		<div class="copyright">© 2017 All right reserved</div>
@@ -377,10 +353,10 @@
 		</div>
 		<nav class="nav nav_main">
 			<a href="#welcome" class="nav__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome">Home</a>
-            <a href="#portfolio" class="nav__link init-scroll_js" data-scroll-nav="2" data-id-section="portfolio">Portfolio</a>
-			<a href="#about" class="nav__link init-scroll_js" data-scroll-nav="1" data-id-section="about">About me</a>
+            <a href="#portfolio" class="nav__link init-scroll_js" data-scroll-nav="1" data-id-section="portfolio">Portfolio</a>
+			<a href="#about" class="nav__link init-scroll_js" data-scroll-nav="2" data-id-section="about">About me</a>
 			<a href="#skills" class="nav__link init-scroll_js" data-scroll-nav="3" data-id-section="skills">Skills</a>
-            <a href="#experience" class="nav__link init-scroll_js" data-scroll-nav="6" data-id-section="experience">Experience</a>
+            <a href="#experience" class="nav__link init-scroll_js" data-scroll-nav="4" data-id-section="experience">Experience</a>
 		</nav>
 		<div class="nav-icon mobile-menu-open_js">
 			<div class="icon-menu"></div>
@@ -397,10 +373,10 @@
 	<div class="nav-panel__content">
 		<nav class="nav nav-panel__layout">
 			<a href="#welcome" class="nav-panel__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome"><i class="icon icon-home nav-panel__icon"></i>Home</a>
-			<a href="#about" class="nav-panel__link init-scroll_js" data-scroll-nav="1" data-id-section="about"><i class="icon icon-user nav-panel__icon "></i>About me</a>
-			<a href="#skills" class="nav-panel__link init-scroll_js" data-scroll-nav="2" data-id-section="skills"><i class="icon icon-skills nav-panel__icon"></i>Skills</a>
-			<a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="experience"><i class="icon icon-diamond nav-panel__icon"></i>Experience</a>
-			<a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="6" data-id-section="portfolio"><i class="icon icon-th nav-panel__icon"></i>Portfolio</a>
+			<a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="1" data-id-section="about"><i class="icon icon-user nav-panel__icon "></i>portfolio</a>
+			<a href="#about" class="nav-panel__link init-scroll_js" data-scroll-nav="2" data-id-section="skills"><i class="icon icon-skills nav-panel__icon"></i>About Me</a>
+			<a href="#skills" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="experience"><i class="icon icon-diamond nav-panel__icon"></i>Skills</a>
+			<a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="4" data-id-section="portfolio"><i class="icon icon-th nav-panel__icon"></i>Experience</a>
 	</div>
 </div>
 
