Changed color, edit index, deleted extra text

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                     <img class="avatar__img responsive-img" src="img/billhoang.jpg" alt="side view of bill"/>
                 </div>
                 <div class="about-me__content">
-                    <p>I was born and raised in Oakland, CA. I was always curious about how things worked and why they worked. One of my favorite things to do is to take apart things and figure out all the components and put them back together. This lead me to developed a nack for coding projects. While coding, I give my best to comment out what each line of code is doing. When I work on a project, I try to study every bit and piece, so I would know it inside and out.</p>
-                    <p>I started learning HTML, CSS, and Javascript all one my own 2 years ago. I went to sites like Udemy, codeacademy to study what I can understand, while working fulltime and trying to support myself. While learning all on my own I found it hard at times with out a mentor or anybody to help me out. I started to look for bootcamps, that is how I ended up at Codify Academy.
+                    <p class='aboutC'>I was born and raised in Oakland, CA. I was always curious about how things worked and why they worked. One of my favorite things to do is to take apart things and figure out all the components and put them back together. This lead me to developed a nack for coding projects. While coding, I give my best to comment out what each line of code is doing. When I work on a project, I try to study every bit and piece, so I would know it inside and out.</p>
+                    <p class="aboutC">I started learning HTML, CSS, and Javascript all one my own 2 years ago. I went to sites like Udemy, codeacademy to study what I can understand, while working fulltime and trying to support myself. While learning all on my own I found it hard at times with out a mentor or anybody to help me out. I started to look for bootcamps, that is how I ended up at Codify Academy.
                     </p>
                 </div>
             </div>
@@ -282,7 +282,7 @@
             <div class="timeline__layout">
                 <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="700" data-time="300"></div>
                 <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1100">
-                    <span class="timeline__date">2014 - 2015</span>
+                    <span class="timeline__date">2015 - 2016</span>
                     <span class="timeline__place-work">Oakland Warehouse</span>
                 </div>
                 <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1200">
@@ -338,7 +338,7 @@
 	
 <footer class="footer">
 	<div class="main-container">
-		<div class="copyright">© 2017 All right reserved</div>
+		<div class="copyright">© 2016 All right reserved</div>
 		<div class="author">Developed by Bill Hoang</div>
 	</div>
 </footer>
@@ -574,7 +574,7 @@
 		<div class="popup__inner">
 			<div class="popup__layout">
 				<header class="popup__header box_blur lrmw_layer"  data-show-delay="500" data-hide-delay="900" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
-					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInUp" data-hide-effect="fadeOutDown">Title work</span></h3>
+					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInUp" data-hide-effect="fadeOutDown">Liquid Gem</span></h3>
 					<img src="img/lgem2.jpg" class="responsive-img" alt="Title popup" />
 				</header>
 				<div class="popup__content">
