changed color, cleaned code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="welcome">
             <h1 class="welcome__header">
                 <span class="welcome__name layer" data-show-effect="fadeInDown" data-show-delay="500">Bill Hoang</span>
-                <span class="welcome__label layer" data-show-effect="fadeInUp" data-show-delay="500">Front-end Developer from Bay Area, CA</span>
+                <span class="welcome__label layer" data-show-effect="fadeInUp" data-show-delay="500">Front-End Developer from Bay Area, CA</span>
             </h1>
             <div class="welcome__footer">
                 <a href="resume.docx" class="welcome__link layer" data-show-effect="fadeInUp" data-show-delay="1000">download resume</a>
@@ -71,12 +71,12 @@
 				</div>
 			</a>
 
-			<a href="Projects/liquidgem/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="1100" data-id="pan">
+			<a href="Projects/jquerymobileapp/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="1100" data-id="pan">
 				<div class="list-works__wrap-img">
-					<img src="img/lgem.jpg" class="responsive-img" alt="Work" />
+					<img src="img/runtracker1.jpg" class="responsive-img" alt="Work" />
 				</div>
 				<div class="list-works__overlay"> 
-					<span class="list-works__name-project list-works__name-project_fade">LiquidGem</span>
+					<span class="list-works__name-project list-works__name-project_fade">Track Your Runs!</span>
 					<span class="list-works__link-project">showmore</span>
 				</div>
 			</a>
@@ -176,7 +176,7 @@
                         <div class="about-me__tag">E-mail</div>
                     </div>
                     <div class="about-me__column">
-                        <div class="about-me__value"><a href="#">BillHoang79@gmail.com</a></div>
+                        <div class="about-me__value">BillHoang79@gmail.com</div>
                     </div>
                 </div>
                 <div class="about-me__row">
@@ -232,7 +232,7 @@
                 <div class="skills-bar__item">
                     <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="600" data-skill-bar-width="">
                         <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1600">
-                            <span class="skill__name">JavaScript & JQuery</span>
+                            <span class="skill__name">JavaScript</span>
                             <span class="skill__value skill__value_js"></span>
                         </div>
                     </div>
@@ -240,7 +240,23 @@
                 <div class="skills-bar__item">
                     <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="800" data-skill-bar-width="">
                         <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1800">
-                            <span class="skill__name">API's & JSON</span>
+                            <span class="skill__name">jQuery</span>
+                            <span class="skill__value skill__value_js"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skills-bar__item">
+                    <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="800" data-skill-bar-width="">
+                        <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1800">
+                            <span class="skill__name">AJAX & JSON</span>
+                            <span class="skill__value skill__value_js"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skills-bar__item">
+                    <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="800" data-skill-bar-width="">
+                        <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1800">
+                            <span class="skill__name">Google API's</span>
                             <span class="skill__value skill__value_js"></span>
                         </div>
                     </div>
@@ -248,7 +264,7 @@
                 <div class="skills-bar__item">
                     <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="1000" data-skill-bar-width="">
                         <div class="skill layer" data-show-effect="fadeIn" data-show-delay="2000">
-                            <span class="skill__name">Angular and AJAX</span>
+                            <span class="skill__name">Angular</span>
                             <span class="skill__value skill__value_js"></span>
                         </div>
                     </div>
@@ -367,7 +383,7 @@
 	<header class="nav-panel__header logo logo_bottom-decor">
 		<span class="logo__item">Bill</span>
 		<span class="logo__item logo__item_bold">Hoang</span>
-		<span class="logo__label">Front-end developer</span>
+		<span class="logo__label">Front-End developer</span>
 	</header>
 	<div class="nav-panel__content">
 		<nav class="nav nav-panel__layout">
@@ -573,17 +589,17 @@
 		<div class="popup__inner">
 			<div class="popup__layout">
 				<header class="popup__header box_blur lrmw_layer"  data-show-delay="500" data-hide-delay="900" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
-					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInUp" data-hide-effect="fadeOutDown">Liquid Gem</span></h3>
-					<img src="img/lgem2.jpg" class="responsive-img" alt="Title popup" />
+					<h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInUp" data-hide-effect="fadeOutDown">Mile Tracker App</span></h3>
+					<img src="img/runtracker2.jpg" class="responsive-img" alt="Title popup" />
 				</header>
 				<div class="popup__content">
 					<div class="popup__description lrmw_layer" data-show-delay="200" data-hide-delay="600" data-time="500" data-show-effect="fadeInLeft" data-hide-effect="fadeOutLeft">
-						<p>Basic replica of an class project called "Liquid Gem", composed of CSS and HTML nothing too fancy.</p>
+						<p>Basic Jquery mobile app, you can save your run progress into you local storage.</p>
 					</div>
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/liquidgem/index.html" class="popup__show-more">Liquid Gem</a>
+							<a href="Projects/jquerymobileapp/index.html" class="popup__show-more">Track Your Runs!!</a>
 						</div>
 					</div>
 				</div>
